Add missing stub methods + authlib + java.net with --add-exports